--- a/index.html
+++ b/index.html
@@ -9,14 +9,14 @@
 	</head>
 	<body>
 		<header>
-			<h1>Header</h1>
+			<h1>Very Laggy</h1>
 		</header>
 			<section id="content">
 				<canvas id="Scales" data-processing-sources="Scales.pde">
 				</canvas>
 		    </section>
 	    <footer>
-		    Footer
+		    Please wait a moment for it to load
 	    </footer>
 	</body>
 </html>
